--- a/index.html
+++ b/index.html
@@ -1,4 +1,130 @@
-Codar.
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Codar</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header id="cab">
+        <div>
+            <p><span>Codar</span>.</p>
+        </div>
+        <nav>
+            <a href="">Inicio</a>
+            <a href="">Serviços</a>
+            <a href="">Contato</a>
+            <a href="" class="btn-codar">login</a>
+        </nav>
+    </header>
+    <section id="banner">
+        <div>
+            <img src="assets/video_call.png" alt="">
+        </div>
+        <div>
+            <p>Alavanque seu negócio com um</p>
+            <h1>Website incrível</h1>
+            <a href="" class="btn-codar">Solicitar Orçamento</a>
+        </div>
+    </section>
+    <section id="servicos">
+        <div>
+            <ul>
+                <li>
+                    <span><img src="assets/check.png" alt=""></span> Domínio personalizado
+                </li>
+                <li>
+                    <span><img src="assets/check.png" alt=""></span> Hospedagem
+                </li>
+                <li>
+                    <span><img src="assets/check.png" alt=""></span> Site responsivo
+                </li>
+                <li>
+                    <span><img src="assets/check.png" alt=""></span> Redes sociais
+                </li>
+                <li>
+                    <span><img src="assets/check.png" alt=""></span> Chat online
+                </li>
+                <li>
+                    <span><img src="assets/check.png" alt=""></span> Blog interativo
+                </li>
+            </ul>
+        </div>
+        <div>
+            <img src="assets/coding_.png" alt="">
+        </div>
+    </section>
+    <section id="news">
+        <p>Nossa equipe está a disposição!</p>
+        <input type="text" placeholder="Celular">
+        <a href="" class="btn-codar">Ligamos pra você</a>
+    </section>
+    <section id="feedback">
+        <article>
+            <div>
+                <span>
+                    <img src="assets/avatar1.jpg" alt="">
+                </span>
+            </div>
+            <div>
+                <p>Ja tive experiências com outras 4 empresas na área e a Codar é sem sobra de dúvidas superior em todos
+                    os
+                    aspectos.</p>
+                <h2>Pedro Ferreira</h2>
+                <h3>Construtora Minari</h3>
+            </div>
+        </article>
+        <article>
+            <div>
+                <span>
+                    <img src="assets/avatar2.jpg" alt="">
+                </span>
+            </div>
+            <div>
+                <p>Ja tive experiências com outras 4 empresas na área e a Codar é sem sobra de dúvidas superior em todos
+                    os
+                    aspectos.</p>
+                <h2>Pedro Ferreira</h2>
+                <h3>Construtora Minari</h3>
+            </div>
+        </article>
+    </section>
+    <footer id="rodape">
+        <div>
+            <h1>Codar.</h1>
+            <p>Criamos websites incríveis.</p>
+        </div>
+        <div>
+            <h2>Sobre</h2>
+            <p>Amamos criar soluções</p>
+        </div>
+        <div>
+            <h2>Contato</h2>
+            <p>123 Av. Manjar - Nárnia</p>
+            <p>+55 96 2321-3131</p>
+            <p>contato@codar.com</p>
+        </div>
+        <div>
+            <h2>Redes Sociais</h2>
+            <a href="">
+                <img src="assets/facebook.png" alt="">
+            </a>
+            <a href="">
+                <img src="assets/instagram.png" alt="">
+            </a>
+            <a href="">
+                <img src="assets/twitter.png" alt="">
+            </a>
+        </div>
+    </footer>
+</body>
+
+</html>
+<!-- Codar.
 Início Serviços Contato Login
 Alavanque seu negócio com um
 Website incrível
@@ -25,4 +151,4 @@ Contato
 123 Av. Manjar - Nárnia
 +55 96 2321-3131
 contato@codar.com
-Redes sociais
+Redes sociais -->
